--- a/webflash/index.html
+++ b/webflash/index.html
@@ -5,9 +5,13 @@
 <body>
     <h1>ESP32 Server 9.00u</h1>
 
-    <p>A version of the ESP32 Server 9.00u code from 24th of February. I have no affiliation with the project and did not develop it at all
+    <p>A version of the ESP32 Server 9.00u code from 24th of February. I have no affiliation with the project and did not develop it at all.
 
-        5
+    </p>
+
+    <br>
+
+    <p>Note: does not currently flash the bins, these can be added from the admin.html web interface
 
     </p>
 
